--- a/CSS/SESION.css
+++ b/CSS/SESION.css
@@ -41,7 +41,7 @@ body{
     width: 500px;
     margin: 0px auto;
     color: #000000; 
-    background:#cadae1; 
+    background:#86a8cf; 
     border-radius: 5px 5px 5px 5px;
     border:2px solid black; 
     margin-top: 10%;
